--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "firebase/php-jwt": "^5.0",
         "topthink/think-worker":"2.0.*",
         "workerman/workerman-for-win": "^3.5",
-        "nesbot/carbon": "2.24.0"
+        "nesbot/carbon": "2.24.0",
+        "topthink/think-image": "^1.0"
     },
     "autoload": {
         "psr-4": {
